@@ -1,3 +1,8 @@
+2015-09-18 Riccardo Mottola <rm@gnu.org>
+
+	* Headers/Foundation/NSError.h
+	Add some 10.6 URL errors
+
 2015-09-16  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* configure.ac: fix check for pthread setname to work with older
